--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,15 @@
                 <version>${junit.version}</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.google.truth/truth -->
+            <dependency>
+                <groupId>com.google.truth</groupId>
+                <artifactId>truth</artifactId>
+                <version>0.42</version>
+                <scope>test</scope>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 </project>
